# nerf4ssh

./: .buildinfo  .gitignore  Makefile  README.md  _toc.yml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  myst.yml  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: book.yaml  deploy.yaml
_sources/: markdown-notebooks.ipynb
_sources/content/paper_james/: 7.2.1_paper_fig_dc20a_maps.ipynb  7.2.3_paper_fig_dc20a_stats.ipynb
config/: main.yaml
config/logger/: wandb.yaml
config/lr_scheduler/: default.yaml  warmup_cosine.yaml
config/model/: ffn.yaml  mlp.yaml  siren.yaml
config/optimizer/: adam.yaml  adamw.yaml
config/paths/: default.yaml
config/period/: ose_gf_2017.yaml
content/: overview.html  overview.md
content/dc20_osse/: 7.2.1_paper_fig_dc20a_maps.ipynb
content/paper/: 1_introduction.md  2_methods.md  3_exp1_toy.md  4_exp2_osse.md  5_exp3_ose.md  6_conclusions.md
content/paper_james/: 7.2.1_paper_fig_dc20a_maps.html  7.2.2_paper_fig_dc20a_movies.html  7.2.3_paper_fig_dc20a_stats.html  7.2.4_paper_fig_dc20a_pixel_densities.html  7.2.5_paper_fig_dc20a_psd_isotropic.html  7.2.6_paper_fig_dc20a_psd_spacetime.html
content/papers/: overview.html
content/tutorial/: 1.1_naive_nerfs.html  1.2_gradients.html  1.3_spatiotemporal.html  1.4.1_sparse_obs_osse_nadir.html  1.4.2_sparse_obs_osse_swot.html  1.4.3_sparse_obs_ose_nadir.html  1.4.3_sparse_ose_nadir.html  overview.html
content/tutorials/: 1.1_naive_nerfs.ipynb  1.2_spatial.ipynb  1.3_spatiotemporal.ipynb  2.1.2_osse_nadir.ipynb  2.1_osse_nadir.ipynb  2.2_osse_nadirswot.ipynb
jbook/: _config.yml
notebooks/: 1.6_modulation.ipynb
notebooks/dev/: 1.1_naive_nerfs-Copy1.ipynb  1.1_naive_nerfs_.ipynb  1.2_gradients.ipynb  1.3_spatiotemporal.ipynb  1.4.1_sparse_obs_osse_nadir.ipynb  1.4.2_sparse_obs_osse_swot.ipynb  1.5_sparse_obs_ose.ipynb  1.6_modulation-Copy1.ipynb  7.2.1_paper_fig_dc20a_maps.ipynb  7.2.5_paper_fig_dc20a_psd_isotropic.ipynb  common_utils.py
old/: _config.yml  _toc.yml
old/content_/: overview.md
(+67 files in other folders)
