[tool.poetry]
name = "nerf4ssh"
version = "0.0.1"
description = "Neural Fields for Sea Surface Height Interpolation."
authors = ["Juan Emmanuel Johnson <jemanjohnson34@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jejjohnson/nerf4ssh"
keywords = ["sea-surface-height", "ocean", "interpolation", "altimetry", "nerfs", "siren", "fourier features"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",

]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jax = "^0.4.12"
jaxlib = "^0.4.12"
xarray = ">=2022.3"
dask = "^2023.4.0"
netcdf4 = "^1.6.3"
bottleneck = "^1.3.7"
dvc = "^2.55.0"
xarray-dataclasses = "^1.5.0"
optax = "^0.1.5"
einops = "^0.6.1"
jaxtyping = "^0.2.20"
urllib3 = "1.26.15"
wandb = "^0.15.0"
loguru = "^0.7.0"
hydra-core = "^1.3.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
autoroot = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.2"
beartype = "^0.13.1"
ruff = "^0.0.263"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.jlab.dependencies]
ipykernel = "^6.22.0"

[tool.poetry.group.jbook.dependencies]
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
sphinx-proof = "^0.1.3"
jupytext = "^1.14.5"

[build-system]
requires = ["poetry-core", "cmake"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["oceanbench"]


[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722", "F821"]
ignore-init-module-imports = true


[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false